--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -964,6 +964,22 @@ video
 
 @media (max-width: 1023px)
 {
+
+    /* Reset custom scrollbar styles for mobile */
+  ::-webkit-scrollbar {
+    width: 0; /* effectively hides it */
+    display: none;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: transparent;
+  }
+
+    
     html,
     body,
     #root
@@ -982,520 +998,4 @@ video
         overflow: hidden;
         background: rgb(0, 0, 0);
     }
-
-    .contacts-bar
-    {
-        display: none;
-    }
-
-    /* Interface */
-
-    .interface
-    {
-        /* position: fixed; */
-        display: flex;
-        flex-direction: column;
-        /* top: 0; */
-        /* left: 0; */
-        width: auto;
-        height: auto;
-    }
-
-
-    /* About */
-
-    .about
-    {
-        display: flex;
-        position: unset;
-        top: unset;
-        right: 0;
-        width: clamp(800px, 60vw, 100%);
-        max-width: 100%;
-        height: 70%;
-        background-color: #000000f0;
-        opacity: 1;
-        z-index: 1;
-        overflow-y: unset;
-        direction: ltr;
-    }
-
-    .about-section
-    {
-        color: #ffffff;
-        user-select: none;
-        pointer-events: none;
-        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    }
-
-    .about-description
-    {
-        font-size: clamp(0.8rem, 2vw, 1rem);
-        line-height: 2rem;
-        padding-top: 5px;
-        padding-left: 35px;
-        padding-right: 35px;
-        padding-bottom: 30px;
-    }
-
-    .about-profile
-    {
-        display: flex;
-        justify-content: center;
-        margin-top: 10px;
-
-    }
-
-    .about-profile > img
-    {
-        width: 40%;
-        border-radius: 0.5em;
-        border: white 2px solid;
-    }
-
-    .about-item
-    {
-        border-style: solid;
-        border-radius: 0.5em;
-        border-width: 2px;
-        border-color: white;
-        padding-right: 30px;
-        padding-left: 30px;
-        padding-bottom: 15px;
-        margin-top: 30px;
-    }
-
-    .about-item .section-title
-    {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 1rem;
-    }
-
-    .about-item .section-title .icon
-    {
-        font-size: 1.8rem;
-    }
-
-    .about-item > hr
-    {
-        display: block;
-        width: 95%;
-    }
-
-    /* Skills */
-
-    .skills
-    {
-        display: flex;
-        justify-content: center;
-        position: unset;
-        top: unset;
-        right: 0;
-        width: clamp(800px, 60vw, 100%);
-        max-width: 100%;
-        height: 70%;
-        background-color: #000000f0;
-        opacity: 1;
-        z-index: 1;
-        overflow-y: unset;
-        direction: unset;
-    }
-    
-    .skills-section
-    {
-        display: grid;
-        grid-template-columns: auto auto;
-        width: 100%;
-        column-gap: 3rem;
-        row-gap: 2rem;
-        color: #ffffff;
-        user-select: none;
-        pointer-events: none;
-        padding-top: 35px;
-        padding-left: 35px;
-        padding-right: 35px;
-        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    }
-    
-    
-    .skills-category > h1
-    {
-        font-size: clamp(1rem, 2vw, 1.5rem);
-        text-align: center;
-        background-color: rgb(0, 0, 0);
-        padding: 18px;
-        border-radius: 0.5em;
-        border-color:white;
-        border-width: 3px;
-        border-style: solid;
-    }
-    
-    .skills-list
-    {
-        display: grid;
-        grid-template-columns: repeat(4, 70px);
-        column-gap: 1rem;
-        row-gap: 1rem;
-        /* height: 75%; */
-    }
-    
-    .skills-item
-    {
-        text-align: center;
-        background-color: #1f1f1ff0;
-        border-radius: 0.5em;
-        border-color:white;
-        border-width: 3px;
-        border-style: solid;
-        height: 4.5rem;
-    }
-    
-    .skills-item > svg
-    {
-        padding-top: 10px;
-        width: 45%;
-        height: 45%;
-    }
-    
-    .skills-item > h4
-    {
-        font-size: clamp(0.5rem, 2vw, 0.7rem);
-        padding-top: 5px;
-        margin: 0;
-    }
-
-/* Projects */
-
-    .projects
-    {
-        display: flex;
-        justify-content: center;
-        position: unset;
-        top: 18%;
-        left: 0;
-        width: 100%;
-        height: 70%;
-        background-color: #000000f0;
-        opacity: 1;
-        z-index: 1;
-        overflow-y: unset;
-        direction: unset;
-    }
-
-    .projects-section
-    {
-        display: grid;
-        grid-template-columns: auto;
-        column-gap: 1rem;
-        row-gap: 3rem;
-        color: #ffffff;
-        user-select: none;
-        padding-top: 35px;
-        padding-left: 35px;
-        padding-right: 35px;
-        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        width: 100%;
-    }
-
-    .project-card
-    {
-        display: flex;
-        flex-direction: row;
-        height: 40rem;
-        background-color: rgb(0, 0, 0);
-        border-radius: 0.5em;
-        border-width: 2px;
-        border-color: white;
-        border-style: solid;
-    }
-
-    .left-card
-    {
-        position: relative;
-        width: 40%;
-        height: clamp(70%, 2vh, 90%);
-        top: 12%;
-        left: 3.5%;
-        border-radius: 0.5em;
-        border-style: solid;
-        border-width: 2px;
-        border-color: white;
-        /* font-size: clamp(0.6rem, 2vw, 0.9rem); */
-    }
-
-    .left-card > h1
-    {
-        font-size: 1.8rem;
-        text-align: center;
-        padding-top: 10px;
-    }
-
-    .left-card > hr
-    {
-        display: block;
-        width: 75%;
-    }
-
-    .left-card > p
-    {
-        font-size: clamp(0.6rem, 2vw, 0.9rem);
-        line-height: clamp(1rem, 2vw, 2rem);
-        padding-top: 10px;
-        padding-left: 30px;
-        padding-right: 30px;
-    }
-
-    .project-skills
-    {
-        padding-top: 10px;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        gap: 8px;
-    }
-
-    .project-skills > p
-    {
-        padding: clamp(2px, 1vw, 8px);
-        font-size: 1rem;
-        margin: 0;
-        background-color: #1f1f1ff0;
-        border-radius: 0.5em;
-        border-color: white;
-        border-width: 2px;
-        border-style: solid;
-
-    }
-
-    .project-links
-    {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        gap: 1rem;
-        padding-top: 20px;
-    }
-
-    .project-link-button
-    {
-        position: relative;
-        display: inline-block;
-        cursor: pointer;
-        border-radius: 0.5em;
-        width: clamp(1rem, 7vw, 5rem);
-        padding: 0.5em;
-        text-align: center;
-        text-decoration: none;
-        font-weight: bold;
-    }
-
-    .neon-effect
-    {
-        color: white;
-        border: white 0.1em solid;
-        background-color: #000000f0;
-        text-shadow: 0 0 0.5em hsl(0, 0%, 100% / 0.75);
-        box-shadow: inset 0 0 0.5em 0 hsl(0, 0%, 100%), 0 0 0.5em 0 hsl(0, 0%, 100%);
-        transition: background-color 100ms linear;
-    }
-
-    .neon-effect::after
-    {
-        content: "";
-        position: relative;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        border-radius: 0.5em;
-        box-shadow: 0 0 2em 0.5em hsl(0, 0%, 100%);
-        opacity: 0;
-        transition: opacity 100ms linear;
-    }
-
-    .neon-effect:hover,
-    .neon-effect:focus
-    {
-        background-color: hsl(0, 0%, 100%);
-        color: black;
-        text-shadow: none;
-        cursor: pointer;
-    }
-
-    .neon-effect:focus:not(:hover) 
-    {
-        color: hsl(0, 0%, 100%);
-        background-color: #000000f0;
-    }
-
-    .neon-effect:hover::after
-    {
-        opacity: 0.25;
-    }
-
-    .right-card
-    {
-        position: relative;
-        width: 50%;
-        top: 12%;
-        left: 6%;
-    }
-
-    video
-    {
-        width: 100%;
-        height: clamp(70%, 2vh, 90%);
-        border-radius: 0.5em;
-        border-color: white;
-        border-style: solid;
-        border-width:2px;
-    }
-
-    /* Experience */
-
-    .experience
-    {
-        display: flex;
-        justify-content: center;
-        position: unset;
-        top: 18%;
-        left: 0;
-        width: clamp(800px, 60vw, 100%);
-        max-width: 100%;
-        height: 70%;
-        background-color: #000000f0;
-        opacity: 1;
-        z-index: 1;
-        overflow-y: unset;
-        direction: unset;
-    }
-
-    .experience-section
-    {
-        display: flex;
-        justify-content: center;
-        color: #ffffff;
-        user-select: none;
-        pointer-events: none;
-        padding-top: 35px;
-        padding-left: 35px;
-        padding-right: 35px;
-        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        direction: ltr;
-    }
-
-    .experience-card
-    {
-        /* height: auto; */
-        /* width: 95%; */
-        border: white 2px solid;
-        border-radius: 0.5em;
-    }
-
-    .experience-card-header
-    {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        font-size: clamp(0.7rem, 2vw, 1rem);
-    }
-
-    .experience-card-header > h1
-    {
-        padding-left: 15px;
-    }
-
-    .experience-card-header > h2
-    {
-        padding-left: 8px;
-        padding-top: 6px;
-    }
-
-    .experience-card-header > h3
-    {
-        position: absolute;
-        right: 8%;
-        padding-top: 8px;
-    }
-
-    .experience-card-body
-    {
-        padding-left: 25px;
-        padding-right: 25px;
-        line-height: 2rem;
-        font-size: clamp(0.8rem, 2vw, 1rem);
-    }
-
-    /* Resume */
-
-    .resume
-    {
-        display: flex;
-        justify-content: center;
-        position: unset;
-        top: 18%;
-        left: 0;
-        width: clamp(800px, 60vw, 100%);
-        /* width: clamp(20rem, 2vw, 10rem); */
-        max-width: 100%;
-        height: 70%;
-        background-color: #000000f0;
-        opacity: 1;
-        z-index: 1;
-        overflow-y: unset;
-        direction: unset;
-    }
-
-    .resume-section
-    {
-        color: #ffffff;
-        user-select: none;
-        padding-top: 35px;
-        padding-left: 35px;
-        padding-right: 35px;
-        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        direction: ltr;
-    }
-
-    .resume-item
-    {
-        display: flex;
-        justify-content: center;
-        padding: 10px;
-        width: 42rem;
-        padding-top: 30px;
-        border-style: solid;
-        border-width: 2px;
-        border-color: white;
-        border-radius: 0.5em;
-    }
-
-    .resume-item > img
-    {
-        width: 40rem;
-        padding-bottom: 25px;
-    }
-
-    .resume-download
-    {
-        display: flex;
-        justify-content: center;
-        padding-top: 20px;
-    }
-
-    .resume-download > a
-    {
-        border-radius: 0.25em;
-        padding: 15px;
-        font-size: clamp(1rem, 2vw, 1.5rem);
-        font-weight: bold;
-        text-decoration: none;
-        text-align: center;
-    }
-
-
-
-
 }
