--- a/my-portfolio/public/css/MobileApp.css
+++ b/my-portfolio/public/css/MobileApp.css
@@ -6,6 +6,7 @@ body,
     padding: 0;
     background: #000000f0;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 /* Scrollbar */
@@ -82,6 +83,7 @@ body,
     justify-content: center;
     transition: opacity 0.5s ease-in-out;
     z-index: 1;
+    overflow: hidden;
 }
   
 .loading-screen-button {
@@ -160,6 +162,7 @@ body,
 .about-title
 {
     margin-top: 2rem;
+    margin-bottom: 2rem;
     text-align: center;
 }
 
@@ -178,7 +181,7 @@ body,
 
 .about-profile > img
 {
-    width: 75%;
+    width: 50%;
     border-radius: 0.5em;
     border: white 2px solid;
     margin-bottom: 25px;
@@ -209,4 +212,314 @@ body,
     display: block;
     width: 95%;
 }
+
+/* Skills */
+
+.skills
+{
+    display: flex;
+    justify-content: center;
+    position: relative;
+    /* width: clamp(800px, 60vw, 100%); */
+    max-width: 100%;
+    height: 70%;
+    background-color: #000000f0;
+    opacity: 1;
+    z-index: 0;
+}
+
+.skills-section
+{
+    display: grid;
+    grid-template-columns: auto;
+    justify-content: center;
+    width: 100%;
+    column-gap: 3rem;
+    row-gap: 0rem;
+    color: #ffffff;
+    user-select: none;
+    pointer-events: none;
+    /* padding-top: 35px; */
+    padding-left: 20px;
+    padding-right: 20px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.skills-title
+{
+    text-align: center;
+    margin-bottom: 25px;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+
+.skills-category > h1
+{
+    font-size: clamp(1rem, 2vw, 1.5rem);
+    text-align: center;
+    background-color: rgb(0, 0, 0);
+}
+
+.skills-list
+{
+    padding-top: 15px;
+    padding-bottom: 15px;
+    display: grid;
+    grid-template-columns: repeat(4, 70px);
+    column-gap: 0.5rem;
+    row-gap: 1rem;
+    /* height: 75%; */
+}
+
+.skills-item
+{
+    text-align: center;
+    background-color: #1f1f1ff0;
+    border-radius: 0.5em;
+    border-color:white;
+    border-width: 3px;
+    border-style: solid;
+    height: 3.5rem;
+}
+
+.skills-item > svg
+{
+    padding-top: 10px;
+    width: 35%;
+    height: 35%;
+}
+
+.skills-item > h4
+{
+    font-size: clamp(0.5rem, 2vw, 0.7rem);
+    padding-top: 5px;
+    margin: 0;
+}
+
+
+/* Projects */
+
+.projects {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    background-color: #000000f0;
+    opacity: 1;
+    z-index: 0;
+}
+
+.projects-section
+{
+    display: flex;
+    flex-direction: column;
+    color: #ffffff;
+    user-select: none;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    width: 100%;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    gap: 5rem;
+}
+
+.project-title
+{
+    color: white;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+}
+
+.project-card {
+    padding-bottom: 15px;
+    /* height: 100%; */
+    width: 95%;
+    align-self: center;
+    display: flex;
+    flex-direction: column-reverse;  
+    /* border: 2px solid white;
+    border-radius: 0.5em; */
+    background: #000000;
+    overflow: hidden;      
+  }
+
+.left-card
+{
+    position: relative;
+    width: 100%;
+    height: clamp(70%, 2vh, 90%);
+    height: 50%;
+}
+
+.left-card > h1
+{
+    font-size: 1.3rem;
+    text-align: center;
+    padding-top: 10px;
+}
+
+.left-card > hr
+{
+    display: block;
+    width: 75%;
+}
+
+.left-card > p
+{
+    font-size: clamp(1rem, 2vw, 1.3rem);
+    line-height: clamp(1.5rem, 2vw, 2rem);
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.project-skills
+{
+    padding-top: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 8px;
+}
+
+.project-skills > p
+{
+    padding: clamp(2px, 1vw, 8px);
+    font-size: 1rem;
+    margin: 0;
+    background-color: #1f1f1ff0;
+    border-radius: 0.5em;
+    border-color: white;
+    border-width: 2px;
+    border-style: solid;
+
+}
+
+.project-links
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 1rem;
+    padding-top: 20px;
+}
+
+.project-link-button
+{
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    border-radius: 0.5em;
+    width: clamp(5rem, 7vw, 7rem);
+    padding: 0.5em;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.right-card
+{
+    position: relative;
+    top: 0;
+    width: 100%;
+    /* height: 50%; */
+    /* height: 50%; */
+}
+
+video
+{
+    width: 100%;
+    /* height: clamp(70%, 2vh, 90%); */
+    /* height: 10%; */
+}
+
+.nighttimer-container
+{
+    display: flex;
+    justify-content: center;
+}
+
+.nighttimer
+{
+    width: 35%;   
+}
+
+/* Experience */
+
+.experience
+{
+    display: flex;
+    justify-content: center;
+    position: relative;
+    /* width: clamp(800px, 60vw, 100%); */
+    max-width: 100%;
+    height: 70%;
+    background-color: #000000f0;
+    opacity: 1;
+    z-index: 0;
+}
+
+.experience-section
+{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    color: #ffffff;
+    user-select: none;
+    pointer-events: none;
+    padding-top: 35px;
+    padding-left: 8px;
+    padding-right: 8px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    direction: ltr;
+}
+
+.experience-title
+{
+    text-align: center;
+}
+
+.experience-card
+{
+    /* height: auto; */
+    /* width: 95%; */
+    /* border: white 2px solid;
+    border-radius: 0.5em; */
+}
+
+.experience-card-header
+{
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+    font-size: clamp(0.7rem, 2vw, 1rem);
+}
+
+.experience-card-header > h1
+{
+    padding-left: 10px;
+}
+
+.experience-card-header > h2
+{
+    padding-left: 10px;
+}
+
+.experience-card > hr
+{
+    width: 94%;
+}
+
+.experience-card-body
+{
+    padding-left: 12px;
+    padding-right: 12px;
+    line-height: 2rem;
+    font-size: clamp(0.8rem, 2vw, 1rem);
+}
+
 
