--- a/my-portfolio/public/css/MobileApp.css
+++ b/my-portfolio/public/css/MobileApp.css
@@ -149,6 +149,7 @@ body,
     background-color: #000000f0;
     opacity: 1;
     z-index: 0;
+    
 }
 
 .about-section
@@ -232,7 +233,7 @@ body,
 {
     display: grid;
     grid-template-columns: auto;
-    justify-content: center;
+    /* justify-content: center; */
     width: 100%;
     column-gap: 3rem;
     row-gap: 0rem;
@@ -266,9 +267,10 @@ body,
     padding-top: 15px;
     padding-bottom: 15px;
     display: grid;
-    grid-template-columns: repeat(4, 70px);
-    column-gap: 0.5rem;
+    grid-template-columns: repeat(4, clamp(4rem, 16vw, 24rem));
+    column-gap: 1rem;
     row-gap: 1rem;
+    justify-self: center;
     /* height: 75%; */
 }
 
@@ -277,22 +279,20 @@ body,
     text-align: center;
     background-color: #1f1f1ff0;
     border-radius: 0.5em;
-    border-color:white;
-    border-width: 3px;
-    border-style: solid;
-    height: 3.5rem;
+    border: 3px solid white;
+    height: clamp(4.5rem, 10vw, 8rem);
 }
 
 .skills-item > svg
 {
-    padding-top: 10px;
-    width: 35%;
-    height: 35%;
+    padding-top: 1rem;
+    width: clamp(1.5rem, 4vw, 3rem);
+    height: clamp(1.5rem, 4vw, 3rem);
 }
 
 .skills-item > h4
 {
-    font-size: clamp(0.5rem, 2vw, 0.7rem);
+    font-size: clamp(0.5rem, 2vw, 1.0rem);
     padding-top: 5px;
     margin: 0;
 }
@@ -565,7 +565,7 @@ video
 
 .resume-item > img
 {
-    width: 24.5rem;
+    width: clamp(18rem, 75vw, 60rem);
     padding-bottom: 25px;
 }
 
@@ -581,7 +581,7 @@ video
     position: relative;
     opacity: 1;
     z-index: 0;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .contact-title
@@ -602,8 +602,8 @@ video
 .contact-modal
 {
     position: relative;
-    height: 21.5rem;
-    width: 22rem;
+    height: 22rem;
+    width: clamp(14rem, 75vw, 75rem);
     border: white 2px solid;
     border-radius: 0.5em;
     background: #000000f0;
@@ -678,17 +678,10 @@ video
 {
     display: flex;
     justify-content: center;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    width: 20rem;
-    height: 40px;
-    transform: translateX(-50%) translateY(5%); 
+    position: relative;
     color: #ffffff;
-    background: #000000f0;
-    border-top-left-radius: 0.5em;
-    border-top-right-radius: 0.5em;
-    border: white 2px solid;
+    background: #131313f0;
+    margin-top: 2rem;
     user-select: none;
 }
 
