--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -1253,7 +1253,7 @@ video
         column-gap: 1rem;
         row-gap: 1rem;
         justify-self: center;
-        /* height: 75%; */
+        margin-bottom: 2.5rem;
     }
 
     .skills-item
@@ -1316,7 +1316,7 @@ video
         color: white;
         font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         text-align: center;
-        margin-top: 3rem;
+        margin-top: 0rem;
         margin-bottom: 3rem;
         user-select: none;
     }
