--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -972,15 +972,6 @@ video
     body,
     #root
     {
-
-        /* position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background: radial-gradient(#1f1f1f, #000000);
-    overflow: hidden; */
-
         position: unset;
         height: unset;
         width: unset;
@@ -989,6 +980,11 @@ video
         background: #000000f0;
         overflow-y: scroll;
         overflow-x: hidden;
+    }
+
+    .r3f
+    {
+        touch-action: none;
     }
 
     /* Scrollbar */
