--- a/my-portfolio/src/App.css
+++ b/my-portfolio/src/App.css
@@ -845,7 +845,9 @@ video
 .experience-section
 {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    gap: 3rem;
+    /* justify-content: center; */
     color: #ffffff;
     user-select: none;
     pointer-events: none;
@@ -1473,7 +1475,7 @@ video
     .experience-title
     {
         text-align: center;
-        margin-bottom: 2.5rem;
+        margin-bottom: 0;
     }
 
     .experience-card
